--- a/Views/home-page.ejs
+++ b/Views/home-page.ejs
@@ -5,22 +5,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chat Interface</title>
     <link rel="stylesheet" href="/home-page-styling.css">
+    <link rel="stylesheet" href="/user-info.css">
 </head>
 <body>
-    <!-- Logo as a Dropdown Button -->
-<!-- Logo as a Dropdown Button -->
-<div class="dropdown-container">
-    <div class="dropdown">
-        <button class="dropbtn">
-            <img src="/image-data/flm-green-logo.png" alt="Logo" class="logo">
-        </button>
-        <div class="dropdown-content">
-            <div id="userInfo">User Info</div>
-            <a href="#" class="common-button" id="logoutOption">Logout</a>
+    <div class="dropdown-container">
+        <div class="dropdown">
+            <button class="dropbtn">
+                <img src="/image-data/flm-green-logo.png" alt="Logo" class="logo">
+            </button>
+            <div class="dropdown-content">
+                <div id="userInfo" class="typewriter">User Info</div>
+                <!-- Buttons will be aligned in a row to the right -->
+                <a href="#" class="common-button" id="logoutOption">Logout</a>
+                
+                <!-- Add any other buttons you want here -->
+            </div>
         </div>
     </div>
-</div>
-
+    
+    
 
 
     <!-- Chat Container -->
@@ -34,7 +37,7 @@
                     <% chats.forEach(chat => { %>
                         <li data-chat-id="<%= chat.chat_id %>" class="chat-item">
                             <span><%= chat.name %></span>
-                            <button class="delete-chat" data-chat-id="<%= chat.chat_id %>">Delete</button>
+                            <button class="delete-chat" data-chat-id="<%= chat.chat_id %>"></button>
                         </li>
                     <% }); %>
                 <% } else { %>
@@ -54,15 +57,13 @@
             
 
             <!-- Chat Input -->
-            <footer class="chat-footer">
-                <div class="input-container">
-                    <input type="text" id="messageInput" placeholder="Type your message...">
-                    <button id="sendButton">Send</button>
-                    <div id="sendSpinner" style="display:none;">
-                        <i class="fa fa-spinner fa-spin"></i>
-                    </div>
+            <div class="input-container">
+                <textarea id="messageInput" placeholder="Type your message..." rows="1"></textarea>
+                <button id="sendButton"></button>
+                <div id="sendSpinner" style="display:none;">
+                    <i class="fa fa-spinner fa-spin"></i>
                 </div>
-            </footer>
+            </div>
         </div>
     </div>
 
