Updated the Slogan on login page, Updated the Logout Button for Admin Page and cleaned up some visuals.

--- a/Views/login-page.ejs
+++ b/Views/login-page.ejs
@@ -15,7 +15,7 @@
             <div class="form-container">
                 <!-- <p class="register-link">Not a member? <a href="#">Register now</a></p> -->
                 <h2>FOODLOVER'S MARKET AI</h2>
-                <p>AI created to assist with queries.</p>
+                <p>Your AI assistant</p>
                 <form id="loginForm"> <!-- Added ID to the form -->
                     <input type="text" placeholder="Enter username" name="username" required>
                     <input type="password" placeholder="Password" name="password" required>
