--- a/public/home-page-styling.css
+++ b/public/home-page-styling.css
@@ -43,7 +43,7 @@ body {
     margin: 0px 5px 10px 5px; /* Space below the button */
     padding: 10px 20px; /* Adjust padding for a more spacious feel */
     border: none; /* Remove default border */
-    background-color: #4CAF50; /* Bright green background */
+    background-color: #006938; /* Bright green background */
     color: white; /* White text color for contrast */
     cursor: pointer; /* Pointer cursor on hover */
     font-size: 16px; /* Adjusted font size for better readability */
@@ -53,7 +53,7 @@ body {
 }
 
 #newChatButton:hover {
-    background-color: #45a049; /* Darker green on hover */
+    background-color: #00552d; /* Darker green on hover */
     transform: translateY(-2px); /* Slight lift effect on hover */
 }
 
@@ -82,7 +82,7 @@ body {
 }
 
 .chat-item.active {
-    color: #00af11;
+    color: #00552d;
     font-weight: 500;
 }
 
@@ -119,7 +119,7 @@ body {
 
 /* User Message Styles */
 .message.user {
-    background-color: #01713F;
+    background-color: #006938;
     align-self: flex-end;
     border-radius: 8px 8px 0 8px;
     color: white;
@@ -182,14 +182,14 @@ body {
 
 /* Focus State */
 #messageInput:focus {
-    border-color: #4CAF50; /* Change border color on focus */
+    border-color: #006938; /* Change border color on focus */
     box-shadow: 0 0 8px rgba(76, 175, 80, 0.5); /* Light green shadow for focus */
 }
 
 #sendButton {
     padding: 0; /* Remove padding for uniformity */
     border: none; /* Remove default border */
-    background-color: #4CAF50; /* Green background */
+    background-color: #006938; /* Green background */
     color: white; /* White text color */
     cursor: pointer; /* Pointer cursor on hover */
     border-radius: 50%; /* Fully rounded button */
@@ -211,7 +211,7 @@ body {
 
 /* Send Button Hover State */
 #sendButton:hover {
-    background-color: #45a049; /* Darker green on hover */
+    background-color: #00552d; /* Darker green on hover */
     transform: scale(1.05); /* Slight scale-up effect on hover */
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2); /* Shadow on hover */
 }
@@ -236,12 +236,12 @@ body {
 }
 
 .chat-sidebar #chatList::-webkit-scrollbar-thumb {
-    background-color: #4CAF50;
+    background-color: #006938;
     border-radius: 10px;
 }
 
 .chat-sidebar #chatList::-webkit-scrollbar-thumb:hover {
-    background-color: #45a049;
+    background-color: #00552d;
 }
 
 /* Delete Button Styles */
