--- a/Views/home-page.ejs
+++ b/Views/home-page.ejs
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chat Interface</title>
     <link rel="stylesheet" href="/home-page-styling.css">
-    <link rel="stylesheet" href="/user-info.css">
+    <link rel="stylesheet" href="dropdown.css">
 </head>
 <body>
     <div class="dropdown-container">
